fix: add overflow hidden to filter category content to fix Safari browser issue

--- a/website/modules/asset/ui/src/scss/_cases.scss
+++ b/website/modules/asset/ui/src/scss/_cases.scss
@@ -165,7 +165,9 @@
         border-right: 2px solid $gray-500;
         border-bottom: 2px solid $gray-500;
         transform: rotate(45deg);
-        transition: transform 0.3s ease, border-color 0.3s ease;
+        transition:
+          transform 0.3s ease,
+          border-color 0.3s ease;
       }
     }
   }
@@ -182,15 +184,14 @@
 
     &:checked {
       ~ .filter-category {
-
         &::before,
         &::after {
           border-color: $gray-border;
         }
-        
+
         .filter-category__expand-button {
           top: 6px;
-          
+
           &::before {
             transform: rotate(225deg);
           }
@@ -211,7 +212,12 @@
   max-height: 0;
   opacity: 0;
   transform: translateY(-10px);
-  transition: max-height 0.5s ease, opacity 0.3s ease 0.1s, transform 0.3s ease 0.1s, padding-bottom 0.5s ease;
+  transition:
+    max-height 0.5s ease,
+    opacity 0.3s ease 0.1s,
+    transform 0.3s ease 0.1s,
+    padding-bottom 0.5s ease;
+  overflow: hidden;
 
   .tag-search {
     @include font-settings(11px, 140%, $font-weight-medium);
@@ -272,7 +278,7 @@
     border-radius: 4px;
     margin: 0 -8px;
     padding: 8px 8px;
-    
+
     &:hover {
       background-color: rgba($gray-100, 0.6);
       color: $gray-500;
